# market-creator

./: .coveragerc  .gitignore  .gitleaks.toml  .gitleaksignore  .spelling  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  benchmark_propose_questions.py  config-mapping.json  gist_on_testing_behaviours.md  market_identification_prompt.txt  pyproject.toml  run_agent.sh  run_service.sh  tox.ini
.claude/: CLAUDE.md  FSM_AUDIT.md
.claude/docs/: omen_lifecycle.md
.claude/plans/: bump_open_autonomy.md  omen_funds_recoverer.md  omen_recovery_skills.md  omen_redeem_tokens_skill.md  omen_remove_liquidity_skill.md  omen_withdraw_bond_skill.md  omen_withdraw_bonds_skill.md  plan-marketCreatorUnitTestCoverage.prompt.md  redeem_winnings.md  service_split.md
.github/prompts/: plan-marketCreatorUnitTestCoverage.prompt.md
.github/workflows/: common_checks.yml  main_workflow.yml  release.yaml  release.yml  test_release.yaml
market_approval_server/: Dockerfile  __init__.py  backup_config.py  market_approval_server.py
market_approval_server/templates/: index.html
mints/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  320.json  mapping.txt
notebooks/: fpmm_audits.py  generate_roi_analysis_dataset.py  generate_trader_dataset.py  list_finalizing_markets.ipynb  market_activity.py  market_creator_activity.ipynb  market_creator_info.py  market_parameters.ipynb  mech_requests.py  omen_markets.py  omen_subgraph_utils.py  realitio_questions.py  roi_analysis.ipynb  sample.env  subgraph_mech.py  subgraph_omen.py  subgraph_realitio.py  utils.py
scripts/: aea-config-replace.py  check_dependencies.py  check_doc_ipfs_hashes.py  create_market.py  fpmm_audits.py  generate_behavior_tests.py  generate_csv_for_day.py  list_finalizing_markets.ipynb  list_markets.py  market_creator_script.py  market_parameters.ipynb  mech_request_utils.py  omen_subgraph_utils.py  profile_resolving_tool.py  propose_markets.py
tests/: __init__.py  test_dummy.py
tests/graphs/: test_graph_queries.py
