[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "market-creator"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy==0.21.18",
    "toml==0.10.2",
    "hypothesis==6.21.6",
    "grpcio==1.78.0",
    "aiohttp<4.0.0,>=3.8.5",
    "asn1crypto<1.5.0,>=1.4.0",
    "open-aea-ledger-ethereum==2.2.1",
    "openai==1.93.0",
    "protobuf>=5,<6",
    "open-aea-helpers==0.21.18",
    "open-aea-test-autonomy==0.21.18",
    "ipfshttpclient==0.8.0a2",
    "open-aea-cli-ipfs==2.2.1",
    "requests==2.32.5",
    "pytest>=8.2,<10",
    "pytest-asyncio==1.3.0",
    "ecdsa>=0.15",
    "open-aea-ledger-cosmos==2.2.1",
    "certifi==2026.2.25",
    "multidict==6.7.1",
    "py-eth-sig-utils==0.4.0",
    "web3<8,>=7.0.0",
    "eth_typing==5.2.1",
    "pytz==2022.2.1",
    "typing_extensions<=4.15.0,>=3.10.0.2",
    "hexbytes==1.3.1",
    "packaging==26",
    "openapi-core==0.22.0",
    "openapi-spec-validator>=0.7.0,<0.8.0",
    "flask-cors>=5.0.0,<6",
    "gql>=3.5.0,<4",
    "pydantic>=2.11.9,<3",
    "tiktoken>=0.12.0,<0.13",
    "eth-utils==5.3.0",
    "setuptools>=78.0.1,<79",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/market-creator"

[dependency-groups]
dev = [
    "google-genai>=1.70.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "tomte[cli, tests]>=0.6.5",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
