[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "market-creator"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy[cli]==0.21.18",
    "toml==0.10.2",
    "hypothesis==6.21.6",
    "grpcio==1.78.0",
    "aiohttp<4.0.0,>=3.8.5",
    "asn1crypto<1.5.0,>=1.4.0",
    "open-aea-ledger-ethereum==2.2.1",
    "openai==1.93.0",
    "protobuf>=5,<6",
    "open-aea-helpers==0.21.18",
    "open-aea-test-autonomy==0.21.18",
    "ipfshttpclient==0.8.0a2",
    "open-aea-cli-ipfs==2.2.1",
    "requests==2.32.5",
    "pytest>=8.2,<10",
    "pytest-asyncio==1.3.0",
    "ecdsa>=0.15",
    "open-aea-ledger-cosmos==2.2.1",
    "certifi==2026.2.25",
    "multidict==6.7.1",
    "py-eth-sig-utils==0.4.0",
    "web3<8,>=7.0.0",
    "eth_typing==5.2.1",
    "pytz==2022.2.1",
    "typing_extensions<=4.15.0,>=3.10.0.2",
    "hexbytes==1.3.1",
    "packaging==26",
    "openapi-core==0.22.0",
    "openapi-spec-validator>=0.7.0,<0.8.0",
    "flask-cors>=5.0.0,<6",
    "gql>=3.5.0,<4",
    "pydantic>=2.11.9,<3",
    "py-multibase==1.0.3",
    "py-multicodec==0.2.1",
    "eth-utils==5.3.0",
    "setuptools>=78.0.1,<79",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/market-creator"

[dependency-groups]
dev = [
    "google-genai>=1.70.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@058d5ceae140ad966eadb413d4e02f23930b9739",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
# Third-party packages on disk are synced from open-autonomy + open-aea
# upstreams (auto-prepended) plus mech-interact / trader / genai for the
# Realitio / FPMM contract wrappers and the mech_interact_abci skill.
upstream_pins = [
    "valory-xyz/mech-interact@v0.27.0",
    "valory-xyz/trader@v0.34.1",
    "valory-xyz/genai@v6.0.0",
]
# IPFS CIDv1 hashes (`bafybei...`) used by Open Autonomy package
# fingerprints look like generic API keys to gitleaks; allowlist them.
# Source files containing constant-name strings (CT_REDEEM_TOKENS_*,
# collection_key field names, fpmm_deterministic_factory_contract key)
# trip the same generic-secret rule — these are public API surface
# identifiers, not credentials.
gitleaks_extra_regexes = ["bafybei[a-z2-7]{52}"]
gitleaks_extra_paths = [
    "packages/valory/skills/.*",
    "notebooks/.*",
    "market_approval_server/.*",
    "\\.claude/.*",
]
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@058d5ceae140ad966eadb413d4e02f23930b9739"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"
markers = [
    "integration: marks integration tests which require other network services",
    "e2e: marks end-to-end agent tests",
]
filterwarnings = ["ignore::DeprecationWarning:aea.*:"]

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
